# openvmm

./: Cargo.toml  rust-toolchain.toml
.config/: nextest.toml
.github/scripts/refresh_mirror/: refresh-mirror.py
.github/workflows/: openvmm-ci.json  openvmm-ci.yaml  openvmm-pr.json  openvmm-pr.yaml  refresh-mirror.yml
Guide/src/: SUMMARY.md
azure-pipelines/: mirror-branch.yaml
flowey/flowey_core/src/: pipeline.rs
flowey/flowey_lib_common/src/: cache.rs  download_cargo_nextest.rs  download_gh_release.rs  gen_cargo_nextest_run_cmd.rs  install_apt_pkg.rs  install_cargo_nextest.rs  install_rust.rs  junit_publish_test_results.rs  lib.rs  publish_gh_release.rs  publish_test_results.rs  run_cargo_build.rs  run_cargo_nextest_run.rs
flowey/flowey_lib_hvlite/src/: build_and_test_vmgs_lib.rs  build_nextest_unit_tests.rs  build_nextest_vmm_tests.rs  download_openvmm_vmm_tests_vhds.rs  init_cross_build.rs  init_hyperv_tests.rs  init_vmm_tests_env.rs  lib.rs  run_cargo_build.rs  run_cargo_nextest_run.rs  run_igvmfilegen.rs  run_split_debug_info.rs  test_nextest_unit_tests_archive.rs  test_nextest_vmm_tests_archive.rs
hyperv/hyperv_lib/: Cargo.toml
hyperv/hyperv_lib/src/: lib.rs  powershell.rs
openhcl/bootloader_fdt_parser/src/: lib.rs
openhcl/build_info/src/: lib.rs
openhcl/diag_client/: Cargo.toml
openhcl/diag_client/src/: lib.rs
openhcl/hcl/src/: ioctl.rs
openhcl/host_fdt_parser/src/: lib.rs
openhcl/kmsg_defs/src/: lib.rs
openhcl/underhill_core/: Cargo.toml
openhcl/underhill_crash/: Cargo.toml
openhcl/underhill_dump/: Cargo.toml
openvmm/hvlite_core/: Cargo.toml
openvmm/hvlite_defs/: Cargo.toml
openvmm/openvmm_entry/: Cargo.toml
petri/: Cargo.toml
petri/guest-bootstrap/: imc.hiv  imc.psm1  user-data
petri/pipette/: Cargo.toml
petri/pipette_util/: Cargo.toml
petri/pipette_util/src/: main.rs
petri/src/: disk_image.rs  openhcl_diag.rs  tracing.rs
support/cmd_builder/: Cargo.toml
support/cmd_builder/src/: lib.rs  ps.rs
support/guid/: Cargo.toml
support/guid/src/: lib.rs
vm/vm_defs/: Cargo.toml
vm/whp/: Cargo.toml
vmm_core/virt_support_aarch64emu/: Cargo.toml
vmm_tests/vmm_tests/: Cargo.toml
(+206 files in other folders)
