# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "hyperv_lib"
edition.workspace = true
rust-version.workspace = true

[dependencies]
get_resources.workspace = true

guid.workspace = true
pal_async.workspace = true

anyhow.workspace = true
async-trait.workspace = true
jiff = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
