# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "guid"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
mesh = ["mesh_protobuf"]
ps_val = ["cmd_builder"]

[dependencies]
cmd_builder = { workspace = true, optional = true }
inspect = { workspace = true, optional = true }
mesh_protobuf = { workspace = true, optional = true }

getrandom.workspace = true
thiserror.workspace = true
zerocopy.workspace = true
[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
windows.workspace = true

[target.'cfg(windows)'.dependencies.winapi]
workspace = true
features = [
    "guiddef",
]

[lints]
workspace = true
